--- a/email-1-intro-built-for-trucking.html
+++ b/email-1-intro-built-for-trucking.html
@@ -279,7 +279,7 @@
 
             <!-- bottom content -->
 
-            <ul style="width: 472px; padding: 0; text-align: left; line-height: 150%; font-size: 16px;">
+            <ul style="width: 472px; padding: 0; text-align: left; line-height: 150%; font-size: 16px; margin-top: 20px;">
               <li>
                 <span
                   >FleetNet – 24/7 nationwide roadside assistance billed through
@@ -304,7 +304,7 @@
             </ul>
             <tr>
               <td align="center" style="padding: 10px 30px 20px 30px">
-                <a href="https://tachusa.com/partners/southern-reins" style="
+                <a href="#" style="
                     background-color: #6a9e68;
                     color: #ffffff;
                     text-decoration: none;
@@ -316,18 +316,21 @@
                     display: inline-block;
                   ">
                    See Your Benefits
+                </a><br>
+                <a href="#" style="
+                    color: #6a9e68;
+                    text-decoration: none;
+                    padding: 12px 30px;
+                    border-radius: 6px;
+                    font-size: 18px;
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-weight: 400;
+                    display: inline-block;
+                    margin-top: 10px;
+                    text-decoration: underline;
+                  ">
+                   Join TACH Today
                 </a>
-                <p style="
-                  padding: 20px 10px 10px 10px;
-                  color: #6A9E68;
-                  font-family: Arial, Helvetica, sans-serif;
-                  font-size: 16px;
-                  font-weight: 400;
-                  margin: auto;
-                  text-decoration: underline;
-                ">
-                  Join TACH Today
-                </p>
               </td>
             </tr>
 
