--- a/email-1-intro-built-for-trucking.html
+++ b/email-1-intro-built-for-trucking.html
@@ -162,10 +162,10 @@
                           "
                         >
                           We replace your business bank account with one
-                          <strong
+                          <span style="font-weight: bold;"
                             >built for trucking, complete with Smart Budgeting,
                             Instant Funding, and a commercial card for each
-                            truck</strong
+                            truck</span
                           >
                           that tracks every load, mile, and expense.
                         </p>
@@ -293,7 +293,7 @@
               </li>
               <li style="margin-top: 10px;">
                 <span
-                  >Ryder & Penske – Access to nationwide rentals with <strong>up to $5,000 off truck rental deposits.</strong></span
+                  >Ryder & Penske – Access to nationwide rentals with <span style="font-weight: bold;">up to $5,000 off truck rental deposits.</span></span
                 >
               </li>
               <li style="margin-top: 10px;">
